Add application bundle & CLI support
The command line support can be used to implement custom commands
to perform various tasks. The command line runner will locate
`CliCommand` instances using service loader interface. A `database`
command is added to perform various database related tasks.

The gradle plugin adds a new task `buildApp` to build application
distribution. The application bundle will be generated at
`build/install/{project-name}` folder which includes extracted war
application in the `app/` directory, launcher script dependencies in
the `lib/` directory, and executable scripts in the `bin/` directory.

The `axelor` script is an executable command line tool that can be used
to execute various commands provided by the app: `./bin/axelor --help`
for more details.

Gradle support for database management, `./gradlew database (init|update|...)`,
is removed in favor of new CLI.

Fixes #1204